bk_ida/gobmkida/c1/dfa_shuffle
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/dfa_shuffle/src/patterns/dfa.c:1485:12: error: expected expression
*( _OWORD *)&v20[v21 * 4] = *( _OWORD *)&v19[v21]; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/dfa_shuffle/src/patterns/dfa.c:1485:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v20[v21 * 4] = *( _OWORD *)&v19[v21]; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/dfa_shuffle/src/patterns/dfa.c:1485:40: error: expected expression
*( _OWORD *)&v20[v21 * 4] = *( _OWORD *)&v19[v21]; 
                                       ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/dfa_shuffle/src/patterns/dfa.c:1485:32: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v20[v21 * 4] = *( _OWORD *)&v19[v21]; 
                               ^
4 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/dfa_shuffle/src/obj/3/dfa.o] Error 1
